tests/baselines/reference/parserAccessibilityAfterStatic10.errors.txt
==== tests/cases/compiler/parserAccessibilityAfterStatic10.ts (1 errors) ====
    class Outer
    {
    static public intI<T>() {}
           ~~~~~~
!!! parserAccessibilityAfterStatic10.ts(3,8): error TS1029: 'public' modifier must precede 'static' modifier.
    }
    